--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/fontawesome-free": "^6.6.0",
     "animate.css": "^4.1.1",
     "core-js": "^3.8.3",
+    "emailjs-com": "^3.2.0",
     "vue": "^2.6.14"
   },
   "devDependencies": {
