--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "animate.css": "^4.1.1",
     "core-js": "^3.8.3",
     "emailjs-com": "^3.2.0",
+    "v-mask": "^2.3.0",
     "vue": "^2.6.14"
   },
   "devDependencies": {
